[package]
name = "viacep"
version = "1.0.0"
authors = ["Guilherme Branco Stracini <guilherme@guilhermebranco.com.br>"]
edition = "2021"
description = "The Via CEP client wrapper."
repository = "https://github.com/guibranco/viacep-sdk-rs.git"
homepage = "https://github.com/guibranco/viacep-sdk-rs"
keywords = ["rest", "client", "sdk", "cep", "viacep"]
categories = ["network-programming", "web-programming::http-client"]
readme = "README.md"
license = "MIT"

[dependencies]
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
prettytable-rs = "0.10"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2.5"
